:bug: fix visibility errors on mobile version

--- a/assets/styles/global/modifiers/_box.scss
+++ b/assets/styles/global/modifiers/_box.scss
@@ -79,3 +79,10 @@
     top: 0;
   }
 }
+
+
+.has-no-borer-radius-mobile{
+  @include for-size(phone-only) {
+    border-radius: 0 !important;
+  }
+}
